<service_id>,0,0,0,0,0,0,0,<start_date>,<end_date>
Services which do not contain a valid day pattern can be skipped by specifying:
skipemptyservice=true
in the configuration file. 
As a side effect, specific non-service days (<DaysOfNonOperation>) are also skipped in calendar_dates.txt, while records for specific 
<DaysOfOperation> continue to be output in calendar_dates.txt 
This option is not available as a command line argument, i.e. requires the use of a configuration file. 
This setting addresses issue #253 in http://code.google.com/p/googletransitdatafeed/issues/list

*** Skip orphan stops 
TransXChange feeds sometimes contain stops which are not referenced in any of the services. 
Stops which are not referenced by a service ("orphan stops") can be skipped by specifying:
skiporhpanstops=true
This option is not available as a command line argument, i.e. requires the use of a configuration file. 

*** Service <Mode> override of default route type
Services of a TransXChange feed that include a <Mode>, override the default route type, provided that the <Mode> is defined in the configuration file and associated with a valid GTFS route type. 
Example:
mode:rail=2
mode:bus=3
mode:ferry=4
Any occurrence of a Service <Mode> "bus" in the TransXChange feed will be set to value "3" in column "route_type" of the routes.txt file.
This option is not available as a command line argument, i.e. requires the use of a configuration file.
This setting addresses issue #254 in http://code.google.com/p/googletransitdatafeed/issues/list

*** NaPTAN stop name helper
Without the NaPTAN stop name helper activated, the converter by default combines the values of <CommonName> and <LocalityName> into the stops.txt file's stop_name's.
The NapTAN stop name helper implements the usable stop name rules v4 for NaPTAN and NPTG databases. It rolls out the following format:
<LocalityName>,<Indicator><CommonName>(on <street>)[SMS: <NaptanCode>]
naptanstophelper=true

*** NaPTAN stop column pick